# open-base44

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VISION.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/nativebot/: __init__.py  agent.py  chat.py  cli.py  constants.py  display.py  projects.py  telegram_bot.py
src/nativebot/template/backend/sql/: schema.sql  storage-policies.sql
src/nativebot/template/backend/src/: auth.ts  middleware.ts  types.ts
src/nativebot/template/mobile/: app.json  metro.config.js
template/expo-app/: CLAUDE.md  README.md  package-lock.json  package.json
template/expo-app/.claude/rules/: api-patterns.md
template/expo-app/backend/: CLAUDE.md  package.json  tsconfig.json
template/expo-app/backend/scripts/: start
template/expo-app/backend/src/: db.ts  env.ts  index.ts
template/expo-app/backend/src/routes/: apps.ts  data.ts  health.ts
template/expo-app/backend/supabase/: config.toml
template/expo-app/backend/supabase/functions/app-action/: index.ts
template/expo-app/backend/supabase/migrations/: 001_initial_schema.sql
template/expo-app/mobile/: .gitignore  CLAUDE.md  index.ts  metro.config.js  package-lock.json  package.json
template/expo-app/mobile/src/app/: _layout.tsx  index.tsx
template/expo-app/mobile/src/components/: Icons.tsx
